--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "license": "MIT",
   "devDependencies": {
     "express": "*"
+  },
+  "scripts": {   
+    "postinstall": "bower install"    
   }
 }
