--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "name": "Material Todo list",
   "description": "A barebones Node.js material todo list",
   "repository": "https://github.com/makingsensetraining/material-todo",
-  "logo": "https://node-js-sample.herokuapp.com/node.svg",
+  "logo": "https://avatars2.githubusercontent.com/u/2685575?v=3&s=200",
   "keywords": ["node", "material", "angular"]
 }
