--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "description": "A starter project for AngularJS and Material Design",
   "version": "0.0.1",
   "dependencies": {
-    "express": "*"
+    "express": "*",
+    "bower": "*"
   },
   "engines": {
     "node": "0.10.x"
   },
   "scripts": {   
-    "postinstall": "bower install"    
+      "postinstall": "./node_modules/bower/bin/bower install"
   }
 }
